--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: 赵星的个人博客
-logo: /images/favicon.svg
-# description: Minimal is a theme for GitHub Pages.
+logo: https://avatars.githubusercontent.com/u/76764328?v=4&size=64
+description: 
 # show_downloads: true
 # google_analytics:
 theme: jekyll-theme-minimal
+# /images/favicon.svg
