--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
 lsi: false
 safe: true
+source: .
 incremental: false
 highlighter: rouge
 gist:
   noscript: false
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: rouge
+# kramdown:
+markdown: GEM
+highlighter: rouge
 profile: true
 
 title: 赵星的个人博客
