--- a/_config.yml
+++ b/_config.yml
@@ -16,5 +16,5 @@ description:
 # show_downloads: true
 # google_analytics:
 theme: jekyll-theme-minimal
-sass:
-  sass_dir: /assets/css/style.scss
+# sass:
+#   sass_dir: /assets/css/style.scss
